[project]
name = "ilias-tests"
version = "0.2.2"
dependencies = [
  "PFERD@git+https://github.com/garmelon/pferd@master",
  "python-slugify",
  "pyyaml"
]
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
ilias-tests = "ilias_tests.__main__:main"

[[tool.mypy.overrides]]
module = "PFERD.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
