[project]
name = "ilias-tests"
version = "0.3.5"
dependencies = [
  "markdown2>=2.5.1",
  "markdownify>=0.13.1",
  "PFERD@git+https://github.com/garmelon/pferd@master",
  "python-slugify",
  "pyyaml",
]
requires-python = ">= 3.11"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
ilias-tests = "ilias_tests.__main__:main"

[[tool.mypy.overrides]]
module = "PFERD.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pip>=25.2",
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]
